# jinja_1792

./: README.md  pyproject.toml
template_in_filename/: __init__.py
template_in_filename/templates/: incl.txt.jinja  {% if True %}a{%endif%}.txt.jinja
