[tool.poetry]
name = "template-in-filename"
version = "0.1.0"
description = ""
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "template_in_filename"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
